--- a/doc/latex/classPVirtualMachine.tex
+++ b/doc/latex/classPVirtualMachine.tex
@@ -121,15 +121,9 @@ void \hyperlink{classPVirtualMachine_513af8673f1430cd04fd0a0e46abedd4}{prepareTo
 \subsection*{Atrybuty chronione}
 \begin{CompactItemize}
 \item 
-\hypertarget{classPVirtualMachine_fe929445de96589087a96a8f1188fac0}{
-\hyperlink{classPCalcStack}{PCalcStack} $\ast$ \textbf{stack}}
-\label{classPVirtualMachine_fe929445de96589087a96a8f1188fac0}
-
+\hyperlink{classPCalcStack}{PCalcStack} $\ast$ \hyperlink{classPVirtualMachine_fe929445de96589087a96a8f1188fac0}{stack}
 \item 
-\hypertarget{classPVirtualMachine_67feeb2d88b4c8b766d10d6f7d8eb65b}{
-\hyperlink{classPConsole}{PConsole} $\ast$ \textbf{console}}
-\label{classPVirtualMachine_67feeb2d88b4c8b766d10d6f7d8eb65b}
-
+\hyperlink{classPConsole}{PConsole} $\ast$ \hyperlink{classPVirtualMachine_67feeb2d88b4c8b766d10d6f7d8eb65b}{console}
 \end{CompactItemize}
 
 
@@ -192,6 +186,23 @@ W każdej chwili istnienia, wirtualna maszyna Pieta musi znajdować się w jakim
 \item[{\em state}]stan jaki zostanie przypisany wirtualnej maszynie \end{description}
 \end{Desc}
 
+
+\subsection{Dokumentacja atrybutów składowych}
+\hypertarget{classPVirtualMachine_67feeb2d88b4c8b766d10d6f7d8eb65b}{
+\index{PVirtualMachine@{PVirtualMachine}!console@{console}}
+\index{console@{console}!PVirtualMachine@{PVirtualMachine}}
+\subsubsection[{console}]{\setlength{\rightskip}{0pt plus 5cm}{\bf PConsole}$\ast$ {\bf PVirtualMachine::console}\hspace{0.3cm}{\tt  \mbox{[}protected\mbox{]}}}}
+\label{classPVirtualMachine_67feeb2d88b4c8b766d10d6f7d8eb65b}
+
+
+Konsola wejścia/wyjścia Pieta, obsługująca operacje komunikacji z użytkownikiem \hypertarget{classPVirtualMachine_fe929445de96589087a96a8f1188fac0}{
+\index{PVirtualMachine@{PVirtualMachine}!stack@{stack}}
+\index{stack@{stack}!PVirtualMachine@{PVirtualMachine}}
+\subsubsection[{stack}]{\setlength{\rightskip}{0pt plus 5cm}{\bf PCalcStack}$\ast$ {\bf PVirtualMachine::stack}\hspace{0.3cm}{\tt  \mbox{[}protected\mbox{]}}}}
+\label{classPVirtualMachine_fe929445de96589087a96a8f1188fac0}
+
+
+Stos przechowujący wszystkie tymczasowe wartości 
 
 Dokumentacja dla tej klasy została wygenerowana z plików:\begin{CompactItemize}
 \item 
