nowa wersja dokumentacji
git-svn-id: file:///home/tomasz/Nauka/mgr/warsztat/svn@45 8e4b0c39-bd3b-4005-8f3d-6604ed10b576

--- a/doc/latex/classPBlockManager.tex
+++ b/doc/latex/classPBlockManager.tex
@@ -11,13 +11,10 @@ Manager bloków kolorów.
 \begin{CompactItemize}
 \item 
 \hyperlink{classPBlockManager_f5a95fca85a31c0257b38b57cbb3378a}{PBlockManager} (QImage $\ast$, \hyperlink{classPCodePointer}{PCodePointer} $\ast$)
-\begin{CompactList}\small\item\em konstruktor klasy \hyperlink{classPBlockManager}{PBlockManager} \item\end{CompactList}\item 
+\item 
 \hyperlink{classPBlockManager_52d7abb7f858625e9e014fb555f571a6}{$\sim$PBlockManager} ()
-\begin{CompactList}\small\item\em destruktor \item\end{CompactList}\item 
-\hypertarget{classPBlockManager_926e182e360300d6524fbb01fb90866b}{
-void \textbf{setVerbosity} (bool)}
-\label{classPBlockManager_926e182e360300d6524fbb01fb90866b}
-
+\item 
+void \hyperlink{classPBlockManager_926e182e360300d6524fbb01fb90866b}{setVerbosity} (bool)
 \item 
 \hypertarget{classPBlockManager_88f9f5226179e0fbd9d148001de10e97}{
 void \textbf{searchAndFillCodels} ()}
@@ -110,18 +107,29 @@ Klasa odpowiedzialna właściwie tylko za jedną, ale dosyć skomplikowaną oper
 \label{classPBlockManager_f5a95fca85a31c0257b38b57cbb3378a}
 
 
-konstruktor klasy \hyperlink{classPBlockManager}{PBlockManager} 
-
-xyz... \hypertarget{classPBlockManager_52d7abb7f858625e9e014fb555f571a6}{
+Konstruktor \hypertarget{classPBlockManager_52d7abb7f858625e9e014fb555f571a6}{
 \index{PBlockManager@{PBlockManager}!$\sim$PBlockManager@{$\sim$PBlockManager}}
 \index{$\sim$PBlockManager@{$\sim$PBlockManager}!PBlockManager@{PBlockManager}}
 \subsubsection[{$\sim$PBlockManager}]{\setlength{\rightskip}{0pt plus 5cm}PBlockManager::$\sim$PBlockManager ()}}
 \label{classPBlockManager_52d7abb7f858625e9e014fb555f571a6}
 
 
-destruktor 
+Destruktor 
 
-abc... 
+\subsection{Dokumentacja funkcji składowych}
+\hypertarget{classPBlockManager_926e182e360300d6524fbb01fb90866b}{
+\index{PBlockManager@{PBlockManager}!setVerbosity@{setVerbosity}}
+\index{setVerbosity@{setVerbosity}!PBlockManager@{PBlockManager}}
+\subsubsection[{setVerbosity}]{\setlength{\rightskip}{0pt plus 5cm}void PBlockManager::setVerbosity (bool {\em verbosity})}}
+\label{classPBlockManager_926e182e360300d6524fbb01fb90866b}
+
+
+Ustala tryb gadatliwy. \begin{Desc}
+\item[Parametry:]
+\begin{description}
+\item[{\em verbosity}]tryb gadatliwy \end{description}
+\end{Desc}
+
 
 Dokumentacja dla tej klasy została wygenerowana z plików:\begin{CompactItemize}
 \item 
