--- a/doc/latex/classPCalcStack.tex
+++ b/doc/latex/classPCalcStack.tex
@@ -10,10 +10,7 @@ Stos.
 \subsection*{Metody publiczne}
 \begin{CompactItemize}
 \item 
-\hypertarget{classPCalcStack_6a831a20f4dec457de9f880202cf2e33}{
-void \textbf{setVerbosity} (bool)}
-\label{classPCalcStack_6a831a20f4dec457de9f880202cf2e33}
-
+void \hyperlink{classPCalcStack_6a831a20f4dec457de9f880202cf2e33}{setVerbosity} (bool)
 \item 
 \hypertarget{classPCalcStack_7b1abd7a77db664dcf9e0bd56c17301f}{
 void \textbf{clear} ()}
@@ -116,6 +113,21 @@ Stos.
 Klasa pełniąca funkcję stosu wykorzystywanego do interpretowania kodu Pieta. Wszystkie jej funkcjonalności są dokładnie określone przez instrukcje dozwolone w języku Piet - począwszy od podstawowych (kładzenie/zdejmowanie elementów), poprzez arytmetyczne i logiczne (zmieniające elementy na szczycie stosu w zależności od ich wartości) a skończywszy na operacjach sterujących głowicą (przestawianie 'codel chooser' i 'direction pointer' - patrz: specyfikacja Piet), operacjach modyfikujących strukturę elementów stosu oraz operacjach I/O.
 
 Stanowi jeden z dwóch obiektów potrzebnych do pełnej interpretacji kodu, używanych przez tzw. \char`\"{}wirtualną maszynę Pieta\char`\"{}, najwyższy w hierarchi obiekt. 
+
+\subsection{Dokumentacja funkcji składowych}
+\hypertarget{classPCalcStack_6a831a20f4dec457de9f880202cf2e33}{
+\index{PCalcStack@{PCalcStack}!setVerbosity@{setVerbosity}}
+\index{setVerbosity@{setVerbosity}!PCalcStack@{PCalcStack}}
+\subsubsection[{setVerbosity}]{\setlength{\rightskip}{0pt plus 5cm}void PCalcStack::setVerbosity (bool {\em verbosity})}}
+\label{classPCalcStack_6a831a20f4dec457de9f880202cf2e33}
+
+
+Ustala tryb gadatliwy. \begin{Desc}
+\item[Parametry:]
+\begin{description}
+\item[{\em verbosity}]tryb gadatliwy \end{description}
+\end{Desc}
+
 
 Dokumentacja dla tej klasy została wygenerowana z plików:\begin{CompactItemize}
 \item 
